--- a/.github/worflows/first-example.yml
+++ b/.github/worflows/first-example.yml
@@ -3,17 +3,16 @@ name: My First Workflow
 # Trigger
 on: push
 
-# jobs
+# Jobs
 jobs:
   first_job:
-      runs-on: ubuntu-latest
-      steps:
-        - name: welcome message
-           run: echo "My first Github Actions Job"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Welcome message
+        run: echo "My first GitHub Actions Job"
 
-        - name: List files
-          run: ls
+      - name: List files
+        run: ls
 
-        - name: Reade file
-          run: cat README.md
-         
+      - name: Read file
+        run: cat README.md
