--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,6 +8,9 @@ jobs:
   first_job:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+
       - name: Welcome message
         run: echo "My first GitHub Actions Job"
 
