--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -12,10 +12,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Welcome message
-        run: echo "My first GitHub Actions Job"
+        run: |
+          echo "My first GitHub Actions Job"
+          ls -lart
+          cat  README.md
 
-      - name: List files
-        run: ls
+      - name: Generate Ascii artwork
+        run: cowsay -f dragon "Run for cover, I am DRAGON.....RAWR" >> dragon.txt
 
-      - name: Read file
-        run: cat README.md
+      # - name: List files
+      #   run: ls
+
+      # - name: Read file
+      #   run: cat README.md
