--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -9,17 +9,5 @@ jobs:
             - name: Checkout Repo
               uses: actions/checkout@v4
             
-            - name: install cowsay
-              run: sudo apt-get install cowsay -y
-
-            - name: Execute cowsay cmd
-              run: cowsay -f dragon "run for cover, I am a DRAGON ....RAWR" >> dragon.txt
-
-            - name: Test file exists
-              run: grep -i "dragon" dragon.txt
-
-            - name: Read File
-              run: cat dragon.txt
-
-            - name: Checkout Repo files
-              run: ls -ltra
+            - name: Executing shell script
+              run: ./ascii-script.sh
