--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -8,6 +8,9 @@ jobs:
         steps:
             - name: Checkout Repo
               uses: actions/checkout@v4
+
+            - name: list repo files
+              run: ls -ltra
             
             - name: Executing shell script
               run: ./ascii-script.sh
