--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -13,4 +13,4 @@ jobs:
               run: ls -ltra
             
             - name: Executing shell script
-              run: ./ascii-script.sh
+              run: .github/workflows/ascii-script.sh
