--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -13,4 +13,6 @@ jobs:
               run: ls -ltra
             
             - name: Executing shell script
-              run: .github/workflows/ascii-script.sh
+              run: |
+               chmod +x .github/workflows/ascii-script.sh
+               .github/workflows/ascii-script.sh
